fix:  solve some Avatar example

--- a/example/storybook/src/components/MediaAndIcons/Avatar/index.stories.mdx
+++ b/example/storybook/src/components/MediaAndIcons/Avatar/index.stories.mdx
@@ -364,16 +364,16 @@ The Examples section provides visual representations of the different variants o
        justifyContent="center"
        alignItems="center">
         <Avatar.Group isVertical={true}>
-           <Avatar size="lg" bgColor="$emerald600">
+           <Avatar size="lg" bgColor="$emerald600" borderColor="white" borderWidth="$2">
             <Avatar.FallbackText>Sandeep Srivastava</Avatar.FallbackText>  
           </Avatar>
-          <Avatar size="lg" bgColor="$cyan600">
+          <Avatar size="lg" bgColor="$cyan600" borderColor="white" borderWidth="$2">
             <Avatar.FallbackText>Arlene KcCoy</Avatar.FallbackText>
           </Avatar>
-          <Avatar size="lg" bgColor="$indigo600">
+          <Avatar size="lg" bgColor="$indigo600" borderColor="white" borderWidth="$2">
             <Avatar.FallbackText>Rahul Sharma </Avatar.FallbackText>
           </Avatar>
-          <Avatar size="lg" bgColor="$gray600">
+          <Avatar size="lg" bgColor="$gray600" borderColor="white" borderWidth="$2">
             <Avatar.FallbackText>+3 30</Avatar.FallbackText>
           </Avatar>
         </Avatar.Group>
