--- a/example/storybook/src/components/Forms/FormControl/index.stories.mdx
+++ b/example/storybook/src/components/Forms/FormControl/index.stories.mdx
@@ -520,6 +520,72 @@ The Examples section provides visual representations of the different variants o
   />
 </AppProvider>
 
+#### Form Control with Required
+
+<AppProvider>
+  <CodePreview
+    showComponentRenderer={true}
+    showArgsController={false}
+    metaData={{
+      code: `
+        <FormControl isRequired>
+          <FormControl.Label>
+            <FormControl.Label.Text>
+              Choose your favorite color
+            </FormControl.Label.Text>
+          </FormControl.Label>
+          <Select>
+            <Select.Trigger>
+              <Select.Input placeholder="Select option" />
+              <Select.Icon mr="$3">
+                <Icon as={ChevronDownIcon} />
+              </Select.Icon>
+            </Select.Trigger>
+            <Select.Portal>
+              <Select.Backdrop />
+              <Select.Content>
+                <Select.DragIndicatorWrapper>
+                  <Select.DragIndicator />
+                </Select.DragIndicatorWrapper>
+                <Select.Item label="Red" value="Red" />
+                <Select.Item label="Blue" value="Blue" />
+                <Select.Item label="Black" value="Black" />
+                <Select.Item label="Pink" value="Pink" isDisabled={true} />
+                <Select.Item label="Green" value="Green" />
+              </Select.Content>
+            </Select.Portal>
+          </Select>
+          <FormControl.Helper>
+            <FormControl.Helper.Text>
+              You can only select one option
+            </FormControl.Helper.Text>
+          </FormControl.Helper>
+          <FormControl.Error>
+            <FormControl.Error.Icon>
+              <Icon
+                as={WarningIcon}
+              />
+            </FormControl.Error.Icon>
+            <FormControl.Error.Text>Mandatory field</FormControl.Error.Text>
+          </FormControl.Error>
+        </FormControl>
+      `,
+      transformCode: (code) => {
+        return transformedCode(code);
+      },
+      scope: {
+        Wrapper,
+        FormControl,
+        Icon,
+        Select,
+        WarningIcon,
+        ChevronDownIcon,
+      },
+      argsType: {},
+    }}
+  />
+</AppProvider>
+
 ## Advanced
 
 We provide in-depth information on how to customize and extend the component's functionality to meet your needs. Below, we describe how to modify the component to suit your requirements.
