fix: updated title of docs pages

--- a/example/storybook/src/components/Forms/Checkbox/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Checkbox/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: gluestack-ui Checkbox Component | Installation, Usage, and API
+title: Checkbox | gluestack-ui | Installation, Usage, and API
 
 description: Whether you're building a simple form or a complex data collection system, the Checkbox component offers a user-friendly way for users to select multiple options from a list.
 
