--- a/example/storybook/src/components/Provider/Provider/index.stories.mdx
+++ b/example/storybook/src/components/Provider/Provider/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: gluestack-ui Provider Component | Installation, Usage, and API
+title: Provider | gluestack-ui | Usage, and API
 description: Provider component that can be used to configure the library. It consists of StyledProvider, OverlayProvider and ToastProvider internally.
 pageTitle: Provider
 pageDescription: Provider component that can be used to configure the library. It consists of StyledProvider, OverlayProvider and ToastProvider internally.
