--- a/example/storybook/src/components/Forms/TextArea/index.stories.mdx
+++ b/example/storybook/src/components/Forms/TextArea/index.stories.mdx
@@ -1,5 +1,5 @@
 ---
-title: gluestack-ui TextArea Component | Installation, Usage, and API
+title: TextArea | gluestack-ui | Installation, Usage, and API
 
 description: The Textarea component is designed to accommodate larger amounts of text input. It allows multi-line input and can be easily customized to fit the user's needs.
 
