--- a/example/storybook/src/components/Forms/FormControl/index.stories.mdx
+++ b/example/storybook/src/components/Forms/FormControl/index.stories.mdx
@@ -15,6 +15,7 @@ import { Meta } from '@storybook/addon-docs';
 <Meta title="components/Forms/FormControl" />
 
 import {
+  Icon,
   WarningIcon,
   CircleIcon,
   CheckIcon,
@@ -23,12 +24,13 @@ import {
 import {
   FormControl,
   Input,
+  Button,
   Radio,
   Checkbox,
   TextArea,
   Select,
   Modal,
-  Icon,
+  HStack,
   VStack,
   Heading,
 } from './FormControl';
@@ -304,21 +306,21 @@ The Examples section provides visual representations of the different variants o
     showArgsController={false}
     metaData={{
       code: `
-      <FormControl minWidth='$80'>
-        <FormControl.Label mb='$1'>
-          <FormControl.Label.Text color='$text500' lineHeight='$md'>
-            Name
-          </FormControl.Label.Text>
-        </FormControl.Label>
-        <Input>
-          <Input.Input type="text"  py='$2' px='$3' />
-        </Input>
-        <FormControl.Helper mt='$1'>
-          <FormControl.Helper.Text fontSize='$sm' lineHeight='$md'>
-            What would you like people to call you?
-          </FormControl.Helper.Text>
-        </FormControl.Helper>
-      </FormControl>
+        <FormControl minWidth='$80'>
+          <FormControl.Label mb='$1'>
+            <FormControl.Label.Text color='$text500' lineHeight='$md'>
+              Name
+            </FormControl.Label.Text>
+          </FormControl.Label>
+          <Input>
+            <Input.Input type="text"  py='$2' px='$3' />
+          </Input>
+          <FormControl.Helper mt='$1'>
+            <FormControl.Helper.Text fontSize='$sm' lineHeight='$md'>
+              What would you like people to call you?
+            </FormControl.Helper.Text>
+          </FormControl.Helper>
+        </FormControl>
       `,
       transformCode: (code) => {
         return transformedCode(code);
@@ -343,52 +345,52 @@ The Examples section provides visual representations of the different variants o
     showArgsController={false}
     metaData={{
       code: `
-      <FormControl>
-        <FormControl.Label>
-          <Heading color='$text900' fontSize='$md' lineHeight='$md'>
-            Favourite fruit
-          </Heading>
-        </FormControl.Label>
-        <Radio.Group>
-          <VStack space="sm">
-            <Radio size="sm" value="Mango">
-              <Radio.Indicator>
-                <Radio.Icon>
-                  <CircleIcon/>
-                </Radio.Icon>
-              </Radio.Indicator>
-              <Radio.Label lineHeight='$md' color='$text900'>
-                Mango
-              </Radio.Label>
-            </Radio>
-            <Radio size="sm" value="Apple">
-              <Radio.Indicator>
-                <Radio.Icon>
-                  <CircleIcon/>
-                </Radio.Icon>
-              </Radio.Indicator>
-              <Radio.Label lineHeight='$md' color='$text900'>
-                Apple
-              </Radio.Label>
-            </Radio>
-            <Radio size="sm" value="Orange">
-              <Radio.Indicator>
-                <Radio.Icon>
-                  <CircleIcon/>
-                </Radio.Icon>
-              </Radio.Indicator>
-              <Radio.Label lineHeight='$md' color='$text900'>
-                Orange
-              </Radio.Label>
-            </Radio>
-          </VStack>
-        </Radio.Group>
-        <FormControl.Helper mt='$2'>
-          <FormControl.Helper.Text fontSize='$sm' lineHeight='$md'>
-            Choose the fruit you like the most
-          </FormControl.Helper.Text>
-        </FormControl.Helper>
-      </FormControl>
+        <FormControl>
+          <FormControl.Label>
+            <Heading color='$text900' fontSize='$md' lineHeight='$md'>
+              Favourite fruit
+            </Heading>
+          </FormControl.Label>
+          <Radio.Group>
+            <VStack space="sm">
+              <Radio size="sm" value="Mango">
+                <Radio.Indicator>
+                  <Radio.Icon>
+                    <CircleIcon/>
+                  </Radio.Icon>
+                </Radio.Indicator>
+                <Radio.Label lineHeight='$md' color='$text900'>
+                  Mango
+                </Radio.Label>
+              </Radio>
+              <Radio size="sm" value="Apple">
+                <Radio.Indicator>
+                  <Radio.Icon>
+                    <CircleIcon/>
+                  </Radio.Icon>
+                </Radio.Indicator>
+                <Radio.Label lineHeight='$md' color='$text900'>
+                  Apple
+                </Radio.Label>
+              </Radio>
+              <Radio size="sm" value="Orange">
+                <Radio.Indicator>
+                  <Radio.Icon>
+                    <CircleIcon/>
+                  </Radio.Icon>
+                </Radio.Indicator>
+                <Radio.Label lineHeight='$md' color='$text900'>
+                  Orange
+                </Radio.Label>
+              </Radio>
+            </VStack>
+          </Radio.Group>
+          <FormControl.Helper mt='$2'>
+            <FormControl.Helper.Text fontSize='$sm' lineHeight='$md'>
+              Choose the fruit you like the most
+            </FormControl.Helper.Text>
+          </FormControl.Helper>
+        </FormControl>
       `,
       transformCode: (code) => {
         return transformedCode(code);
@@ -416,52 +418,52 @@ The Examples section provides visual representations of the different variants o
     showArgsController={false}
     metaData={{
       code: `
-      <FormControl>
-        <FormControl.Label>
-          <Heading color='$text900' fontSize='$md' lineHeight='$md'>
-            Sign up for newsletters
-          </Heading>
-        </FormControl.Label>
-        <Checkbox.Group>
-          <VStack space="sm">
-            <Checkbox size="sm" value="Mango">
-              <Checkbox.Indicator>
-                <Checkbox.Icon>
-                  <CheckIcon />
-                </Checkbox.Icon>
-              </Checkbox.Indicator>
-              <Checkbox.Label fontSize='$sm' lineHeight='$md' color='$text900'>
-                Daily Bits
-              </Checkbox.Label>
-            </Checkbox>
-            <Checkbox size="sm" value="Apple">
-              <Checkbox.Indicator>
-                <Checkbox.Icon>
-                  <CheckIcon />
-                </Checkbox.Icon>
-              </Checkbox.Indicator>
-              <Checkbox.Label fontSize='$sm' lineHeight='$md' color='$text900'>
-                Event Updates
-              </Checkbox.Label>
-            </Checkbox>
-            <Checkbox size="sm" value="Orange">
-              <Checkbox.Indicator>
-                <Checkbox.Icon>
-                  <CheckIcon />
-                </Checkbox.Icon>
-              </Checkbox.Indicator>
-              <Checkbox.Label fontSize='$sm' lineHeight='$md' color='$text900'>
-                Sponsorship
-              </Checkbox.Label>
-            </Checkbox>
-          </VStack>
-        </Checkbox.Group>
-        <FormControl.Helper mt='$2'>
-          <FormControl.Helper.Text fontSize='$sm' lineHeight='$md'>
-            Subscribe to newsletters for updates.
-          </FormControl.Helper.Text>
-        </FormControl.Helper>
-      </FormControl>
+        <FormControl>
+          <FormControl.Label>
+            <Heading color='$text900' fontSize='$md' lineHeight='$md'>
+              Sign up for newsletters
+            </Heading>
+          </FormControl.Label>
+          <Checkbox.Group>
+            <VStack space="sm">
+              <Checkbox size="sm" value="Mango">
+                <Checkbox.Indicator>
+                  <Checkbox.Icon>
+                    <CheckIcon />
+                  </Checkbox.Icon>
+                </Checkbox.Indicator>
+                <Checkbox.Label fontSize='$sm' lineHeight='$md' color='$text900'>
+                  Daily Bits
+                </Checkbox.Label>
+              </Checkbox>
+              <Checkbox size="sm" value="Apple">
+                <Checkbox.Indicator>
+                  <Checkbox.Icon>
+                    <CheckIcon />
+                  </Checkbox.Icon>
+                </Checkbox.Indicator>
+                <Checkbox.Label fontSize='$sm' lineHeight='$md' color='$text900'>
+                  Event Updates
+                </Checkbox.Label>
+              </Checkbox>
+              <Checkbox size="sm" value="Orange">
+                <Checkbox.Indicator>
+                  <Checkbox.Icon>
+                    <CheckIcon />
+                  </Checkbox.Icon>
+                </Checkbox.Indicator>
+                <Checkbox.Label fontSize='$sm' lineHeight='$md' color='$text900'>
+                  Sponsorship
+                </Checkbox.Label>
+              </Checkbox>
+            </VStack>
+          </Checkbox.Group>
+          <FormControl.Helper mt='$2'>
+            <FormControl.Helper.Text fontSize='$sm' lineHeight='$md'>
+              Subscribe to newsletters for updates.
+            </FormControl.Helper.Text>
+          </FormControl.Helper>
+        </FormControl>
       `,
       transformCode: (code) => {
         return transformedCode(code);
@@ -489,21 +491,21 @@ The Examples section provides visual representations of the different variants o
     showArgsController={false}
     metaData={{
       code: `
-      <FormControl>
-        <FormControl.Label mb='$1'>
-          <FormControl.Label.Text color='$text500' lineHeight='$md'>
-            Comment
-          </FormControl.Label.Text>
-        </FormControl.Label>
-        <TextArea>
-          <TextArea.Input pt='$2' pr='$1'/>
-        </TextArea>
-        <FormControl.Helper mt='$1'>
-          <FormControl.Helper.Text fontSize='$sm' lineHeight='$md'>
-            Type your comment above
-          </FormControl.Helper.Text>
-        </FormControl.Helper>
-      </FormControl>
+        <FormControl>
+          <FormControl.Label mb='$1'>
+            <FormControl.Label.Text color='$text500' lineHeight='$md'>
+              Comment
+            </FormControl.Label.Text>
+          </FormControl.Label>
+          <TextArea>
+            <TextArea.Input pt='$2' pr='$1'/>
+          </TextArea>
+          <FormControl.Helper mt='$1'>
+            <FormControl.Helper.Text fontSize='$sm' lineHeight='$md'>
+              Type your comment above
+            </FormControl.Helper.Text>
+          </FormControl.Helper>
+        </FormControl>
       `,
       transformCode: (code) => {
         return transformedCode(code);
@@ -593,46 +595,112 @@ The Examples section provides visual representations of the different variants o
     showArgsController={false}
     metaData={{
       code: `
-      <FormControl isInvalid isRequired>
-        <FormControl.Label>
-          <Heading color='$text900' fontSize='$md' lineHeight='$md'>
-            Which time slot works best for you?
-          </Heading>
-        </FormControl.Label>
-        <Radio.Group>
-          <VStack space="sm">
-            <Radio size="sm" value="Mango">
-              <Radio.Indicator>
-                <Radio.Icon>
-                  <CircleIcon/>
-                </Radio.Icon>
-              </Radio.Indicator>
-              <Radio.Label lineHeight='$md' color='$text900'>
-                Monday
-              </Radio.Label>
-            </Radio>
-            <Radio size="sm" value="Apple">
-              <Radio.Indicator>
-                <Radio.Icon>
-                  <CircleIcon/>
-                </Radio.Icon>
-              </Radio.Indicator>
-              <Radio.Label lineHeight='$md' color='$text900'>
-                Tuesday
-              </Radio.Label>
-            </Radio>
-            <Radio size="sm" value="Orange">
-              <Radio.Indicator>
-                <Radio.Icon>
-                  <CircleIcon/>
-                </Radio.Icon>
-              </Radio.Indicator>
-              <Radio.Label lineHeight='$md' color='$text900'>
-                Wednesday
-              </Radio.Label>
-            </Radio>
-          </VStack>
-        </Radio.Group>
+        <FormControl isInvalid isRequired>
+          <FormControl.Label>
+            <Heading color='$text900' fontSize='$md' lineHeight='$md'>
+              Which time slot works best for you?
+            </Heading>
+          </FormControl.Label>
+          <Radio.Group>
+            <VStack space="sm">
+              <Radio size="sm" value="Mango">
+                <Radio.Indicator>
+                  <Radio.Icon>
+                    <CircleIcon/>
+                  </Radio.Icon>
+                </Radio.Indicator>
+                <Radio.Label lineHeight='$md' color='$text900'>
+                  Monday
+                </Radio.Label>
+              </Radio>
+              <Radio size="sm" value="Apple">
+                <Radio.Indicator>
+                  <Radio.Icon>
+                    <CircleIcon/>
+                  </Radio.Icon>
+                </Radio.Indicator>
+                <Radio.Label lineHeight='$md' color='$text900'>
+                  Tuesday
+                </Radio.Label>
+              </Radio>
+              <Radio size="sm" value="Orange">
+                <Radio.Indicator>
+                  <Radio.Icon>
+                    <CircleIcon/>
+                  </Radio.Icon>
+                </Radio.Indicator>
+                <Radio.Label lineHeight='$md' color='$text900'>
+                  Wednesday
+                </Radio.Label>
+              </Radio>
+            </VStack>
+          </Radio.Group>
+          <FormControl.Error mt='$2'>
+            <FormControl.Error.Text fontSize='$sm' lineHeight='$md'>
+              Choose only one time slot for the meeting
+            </FormControl.Error.Text>
+          </FormControl.Error>
+        </FormControl>
+      `,
+      transformCode: (code) => {
+        return transformedCode(code);
+      },
+      scope: {
+        Wrapper,
+        FormControl,
+        Icon,
+        Radio,
+        WarningIcon,
+        VStack,
+        CircleIcon,
+        Heading,
+      },
+      argsType: {},
+    }}
+  />
+</AppProvider>
+
+#### Form Control with Inline Form
+
+<AppProvider>
+  <CodePreview
+    showComponentRenderer={true}
+    showArgsController={false}
+    metaData={{
+      code: `
+      <FormControl>
+        <HStack space='md'>
+          <Input>
+            <Input.Input
+              py='$2'
+              type="text"
+              placeholder="Username"
+            />
+          </Input>
+          <Select>
+            <Select.Trigger>
+              <Select.Input placeholder="Country" py='$2'/>
+              <Select.Icon mr="$3">
+                <Icon as={ChevronDownIcon} w='$5' h='$5'/>
+              </Select.Icon>
+            </Select.Trigger>
+            <Select.Portal>
+              <Select.Backdrop />
+              <Select.Content>
+                <Select.DragIndicatorWrapper>
+                  <Select.DragIndicator />
+                </Select.DragIndicatorWrapper>
+                <Select.Item label="Red" value="Red" />
+                <Select.Item label="Blue" value="Blue" />
+                <Select.Item label="Black" value="Black" />
+                <Select.Item label="Green" value="Green" />
+              </Select.Content>
+            </Select.Portal>
+          </Select>
+          <Button px='$3'>
+            <Button.Text fontSize='$sm' fontWeight='$medium'>Next</Button.Text>
+          </Button>
+        </HStack>
         <FormControl.Error mt='$2'>
           <FormControl.Error.Text fontSize='$sm' lineHeight='$md'>
             Choose only one time slot for the meeting
@@ -647,11 +715,46 @@ The Examples section provides visual representations of the different variants o
         Wrapper,
         FormControl,
         Icon,
-        Radio,
-        WarningIcon,
-        VStack,
-        CircleIcon,
-        Heading,
+        HStack,
+        ChevronDownIcon,
+        Input,
+        Select,
+        Button,
+      },
+      argsType: {},
+    }}
+  />
+</AppProvider>
+
+#### Form Control with Form Actions
+
+<AppProvider>
+  <CodePreview
+    showComponentRenderer={true}
+    showArgsController={false}
+    metaData={{
+      code: `
+        <FormControl flexDirection='row'>
+          <Button bg='$red700' mr='$4' py='$2.5' px='$3' h={42}>
+            <Button.Text color='$text50' fontSize='$sm' fontWeight='$medium'>
+              Delete
+            </Button.Text>
+          </Button>
+          <Button variant='outline' borderColor='$trueGray300' py='$2.5' px='$3' h={42}>
+            <Button.Text color='$text900' fontSize='$sm' fontWeight='$medium'>
+              Cancel
+            </Button.Text>
+          </Button>
+        </FormControl>
+      `,
+      transformCode: (code) => {
+        return transformedCode(code);
+      },
+      scope: {
+        Wrapper,
+        FormControl,
+        HStack,
+        Button,
       },
       argsType: {},
     }}
