fix: textarea example

--- a/example/storybook/src/components/Forms/TextArea/index.stories.mdx
+++ b/example/storybook/src/components/Forms/TextArea/index.stories.mdx
@@ -37,7 +37,7 @@ Following is the default implementation of the **TextArea** component without an
     showArgsController={false}
     metaData={{
       code: `
-      <TextArea placeholder="Enter text here...">
+      <TextArea>
         <TextArea.Input
           placeholder="Your text goes here..."
         />
