fix: updated size issue, using tokens now

--- a/example/storybook/src/components/Forms/FormControl/index.stories.mdx
+++ b/example/storybook/src/components/Forms/FormControl/index.stories.mdx
@@ -766,7 +766,7 @@ The Examples section provides visual representations of the different variants o
                   setShowModal(false)
                 }}
               >
-                <Modal.Content maxWidth={420} bg='$white'>
+                <Modal.Content maxWidth='$96' bg='$white'>
                   <Modal.Body p='$5'>
                     <VStack space='xs' mb='$4'>
                       <Heading lineHeight='$' color='$text900'>
