fix: removed height till the bug resolves

--- a/example/storybook/src/components/Forms/FormControl/index.stories.mdx
+++ b/example/storybook/src/components/Forms/FormControl/index.stories.mdx
@@ -813,7 +813,7 @@ The Examples section provides visual representations of the different variants o
                             </FormControl.Label.Text>
                           </FormControl.Label>
                           <Slider defaultValue={40}>
-                            <Slider.Track h={5}>
+                            <Slider.Track>
                               <Slider.FilledTrack bg='$emerald700'/>
                             </Slider.Track>
                             <Slider.Thumb bg='$emerald700'/>
